# amccs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/: amccs-update.service  amccs-update.timer  amccs.env.example  amccs.service  install.sh
docs/: DEPLOYMENT.md
src/amccs/: __init__.py  adb.py  config.py  devices.py  service.py  session.py  state_machine.py
tests/: test_config.py  test_device_manager.py  test_integration_adb.py  test_service.py  test_session.py  test_state_machine.py
